--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # Tailwind for R <img src='man/figures/logo.png' align="right" height="139" />
 
 <!-- badges: start -->
+[![Project Status: Concept – Minimal or no implementation has been done yet, or the repository is only intended to be a limited example, demo, or proof-of-concept.](https://www.repostatus.org/badges/latest/concept.svg)](https://www.repostatus.org/#concept)
 [![Codecov test coverage](https://codecov.io/gh/tjpalanca/tailwind.R/branch/master/graph/badge.svg)](https://codecov.io/gh/tjpalanca/tailwind.R?branch=master)
 <!-- badges: end -->
 
